# axum_sqlx_issue

./: Cargo.toml
.sqlx/: query-954fc966e1013cd2b25b992cf89e7943c2bd8c9211a2576ab66100a4a17cc83f.json  query-9b80acb0c5267790b69551f4259ce5b5df3f11497069577265a25b390879cba9.json
migrations/: 20240716202718_init.sql
src/: main.rs
